--- a/knockout.pager.nuspec
+++ b/knockout.pager.nuspec
@@ -11,6 +11,11 @@
 		<releaseNotes></releaseNotes>
 		<tags>knockout paged paging pager template html javascript</tags>
 	</metadata>
+	<dependencies>
+   		<group>
+			<dependency id="knockoutjs" />
+		</group>
+	</dependencies>
 	<files>
 		<file src="knockout.pager.js" target="Content/Scripts" />
 		<file src="knockout.pager.css" target="Content/Content" />
